[package]
name = "gluon-mesh-vpn-key-translate"
version = "0.2.1"
edition = "2021"
description = "Translates fastd to WireGuard keys."
repository = "https://github.com/AiyionPrime/gluon-mesh-vpn-key-translate.git"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.0", features = ["derive"] }
env_logger = "0.9"
hex = { version = "0.4", features = ["serde"] }
libecdsautil = "0.1.2"
log = "0.4"
recap = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
